# pympress

./: .gitignore  MANIFEST.in  README.html  README.md  appveyor.yml  cxfreeze_setup.py  epydoc.cfg  genindex.html  gettext.sh  index.html  options.html  py-modindex.html  pympress  pympress.html  pympress.py  pyproject.toml  search.html  setup.cfg  setup.py
.copr/: Makefile
.github/: issue_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: brewtests.yml  build_binary.yml  deploy_doc+l10n.yml  deploy_doc_l10n.yml  draft_release.yml  lint_pr.yml  lint_push.yml  manual.yml  pr_linter.yml  publish.yml  publish_release.yml  push_linter.yml  pythonpackage.yml  pythonpublish.yml  updatedocs.yml
_modules/: index.html
_modules/gi/overrides/: Gdk.html  GdkPixbuf.html
_modules/pympress/: __main__.html  app.html  builder.html  config.html  document.html  editable_label.html  extras.html  pointer.html  scribble.html  surfacecache.html  talk_time.html  ui.html  util.html
_modules/pympress/media_overlays/: base.html  gif_backend.html  gst_backend.html  vlc_backend.html
build-aux/: io.github.pympress.yaml
doc/: Makefile  conf.py  contact.rst  download.rst  hacking.rst  index.rst  intro.rst  make.bat  news.rst  prepare-gh-pages  update-gh-pages  user_guide.rst  using.rst
docs/: .buildinfo  CNAME  Makefile  README.html  README.md  conf.py  genindex.html  index.html  index.md  objects.inv  options.md  py-modindex.html  pympress.html  pympress.md  search.html  searchindex.js  update-gh-pages
docs/_modules/: ctypes.html  index.html  vlc.html
docs/_modules/gi/overrides/: Gdk.html  GdkPixbuf.html  Gtk.html
docs/_modules/pympress/: __main__.html  builder.html  callbacks.html  config.html  document.html  editable_label.html  extras.html  media_overlay.html  page_number.html  pointer.html  scribble.html  surfacecache.html  talk_time.html  ui.html  util.html  vlcvideo.html
docs/_modules/watchdog/: events.html
docs/_modules/watchdog/observers/: inotify.html
docs/_sources/: README.md.txt  README.txt  pympress.md.txt  pympress.txt
docs/_static/: documentation_options.js
docs/_static/css/: theme.css
docs/_template/: layout.html
docs/source/: Makefile  conf.py  index.rst  make.bat  pympress.md
docs/source/_template/: breadcrumbs.html  layout.html
poppler-python/: AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  poppler.defs  poppler.override  popplermodule.c  pypoppler-private.h
poppler-python/demo/: Makefile.am  Makefile.in  demo-poppler.py
pympress/: __init__.py  __main__.py  app.py  builder.py  config.py  content.py  deck.py  dialog.py  document.py  editable_label.py  extras.py  media_overlay.py  page_number.py  pixbufcache.py  pointer.py  presenter.py  scribble.py  slideselector.py  surfacecache.py  tags  talk_time.py  ui.py  util.py  vlcvideo.py
pympress/media_overlays/: __init__.py  base.py  gif_backend.py  gst_backend.py  vlc_backend.py
pympress/share/: content.glade  defaults.conf  highlight.glade  presenter.glade
pympress/share/applications/: io.github.pympress.desktop  pympress.desktop
pympress/share/css/: default.css  macos.css
pympress/share/locale/: babel_mapping.cfg  pympress.pot
pympress/share/locale/cs/: pympress.po
pympress/share/locale/cs/LC_MESSAGES/: pympress.mo  pympress.po
pympress/share/locale/de/: pympress.po
pympress/share/locale/de/LC_MESSAGES/: pympress.mo  pympress.po
pympress/share/locale/es/: pympress.po  pympress.pot
pympress/share/locale/es/LC_MESSAGES/: pympress.mo  pympress.po
pympress/share/locale/fr/: pympress.po
pympress/share/locale/fr/LC_MESSAGES/: pympress.mo  pympress.po
pympress/share/locale/hi/LC_MESSAGES/: pympress.po
pympress/share/locale/it/LC_MESSAGES/: pympress.po
pympress/share/locale/ja/LC_MESSAGES/: pympress.po
pympress/share/locale/pl/: pympress.po
pympress/share/locale/pl/LC_MESSAGES/: pympress.mo  pympress.po
pympress/share/locale/zh_CN/LC_MESSAGES/: pympress.po
pympress/share/locale/zh_HANT/LC_MESSAGES/: pympress.po
pympress/share/locale/zh_Hans/LC_MESSAGES/: pympress.po
pympress/share/locale/zh_TW/LC_MESSAGES/: pympress.po
pympress/share/metainfo/: io.github.pympress.metainfo.xml
pympress/share/pixmaps/: make-png
pympress/share/xml/: autoplay.glade  content.glade  deck.glade  highlight.glade  layout_dialog.glade  media_overlay.glade  menu_bar.xml  presenter.glade  shortcuts.glade  time_report_dialog.glade  vlcvideo.glade
scripts/: build_msi_mingw.sh  gettext.sh  poedit.sh  rpm_build  rpm_install  rpm_post_install  test_msi.bat
share/css/: default.css  macos.css
