[metadata]
name = pympress
version = attr: pympress.__version__
keywords = pdf-viewer, beamer, presenter, slide, projector, pdf-reader, presentation, python, poppler, gtk, pygi, vlc
description = A simple and powerful dual-screen PDF reader designed for presentations.
long_description = file: README.md
long_description_content_type = text/markdown
author = Cimbali, Thomas Jost, Christof Rath, Epithumia
author_email = me@cimba.li
url = https://github.com/Cimbali/pympress/
download_url = https://github.com/Cimbali/pympress/releases/latest
license = GPLv2
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: X11 Applications :: GTK
	Intended Audience :: Education
	Intended Audience :: End Users/Desktop
	Intended Audience :: Information Technology
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Natural Language :: English
	Natural Language :: French
	Natural Language :: German
	Natural Language :: Polish
	Natural Language :: Spanish
	Natural Language :: Czech
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Multimedia :: Graphics :: Presentation
	Topic :: Multimedia :: Graphics :: Viewers

[options]
packages = pympress
install_requires =
	python-vlc
	watchdog
	enum34;python_version<"3.4"

[options.package_data]
pympress =
	share/xml/*.glade
	share/css/*.css
	share/pixmaps/*.png
	share/locale/*/LC_MESSAGES/pympress.mo

[options.entry_points]
gui_scripts =
	pympress = pympress.__main__:main

[bdist_wheel]
universal = 1

[style]
based_on_style = pep8
column_limit = 120
split_complex_comprehension = on
split_penalty_comprehension = 5000
split_penalty_excess_character = 40
use_tabs = off
indent_width = 4
