[metadata]
name = pympress
version = attr: pympress.__version__
keywords = pdf-viewer, beamer, presenter, slide, projector, pdf-reader, presentation, python, poppler, gtk, pygi, vlc
description = A simple and powerful dual-screen PDF reader designed for presentations.
long_description = file: README.md
long_description_content_type = text/markdown
author = Cimbali, Thomas Jost, Christof Rath, Epithumia
author_email = me@cimba.li
url = https://github.com/Cimbali/pympress/
download_url = https://github.com/Cimbali/pympress/releases/latest
project_urls =
	Issues = https://github.com/Cimbali/pympress/issues/
	Documentation = https://cimbali.github.io/pympress/
	Source Code = https://github.com/Cimbali/pympress/
license = GPLv2
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: X11 Applications :: GTK
	Intended Audience :: Education
	Intended Audience :: End Users/Desktop
	Intended Audience :: Information Technology
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Natural Language :: English
	Natural Language :: French
	Natural Language :: German
	Natural Language :: Polish
	Natural Language :: Spanish
	Natural Language :: Czech
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Multimedia :: Graphics :: Presentation
	Topic :: Multimedia :: Graphics :: Viewers

[options]
packages =
	pympress
	pympress.media_overlays
python_requires = >=3
install_requires =
	python-vlc
	watchdog
	enum34;python_version<"3.4"
setup_requires =
	babel

[options.extras_require]
build_sphinx =
	sphinx
	recommonmark
	sphinxcontrib-napoleon
	sphinx-rtd-theme
babel =
	babel
	babelgladeextractor

[options.package_data]
pympress =
	share/defaults.conf
	share/xml/*.glade
	share/css/*.css
	share/pixmaps/*.png
	share/locale/*/LC_MESSAGES/pympress.mo

[options.entry_points]
gui_scripts =
	pympress = pympress.__main__:main

[style]
based_on_style = pep8
column_limit = 120
split_complex_comprehension = on
split_penalty_comprehension = 5000
split_penalty_excess_character = 40
use_tabs = off
indent_width = 4

[flake8]
docstring-convention = google
max-line-length = 120
builtins = _, unicode
exclude =
	.git
	__pycache__
	build/
	dist/

ignore = D107, D200, D210, D413, E251, E302, E303, W504,  # never complain about those
		 D205, D212, D415, E201, E221, E241, E266, E301, E402, E701, E731  # allow sometimes, e.g. aligning code etc.

per-file-ignores =
	# do not complain about dummy functions
	pympress/media_overlays/gif_backend.py: D102, E704

[build_sphinx]
source-dir = docs
config-dir = docs
builder = html

[extract_messages]
no_location = true
no_wrap = true
sort_output = true
omit_header = true
output-file = pympress/share/locale/pympress.pot
mapping_file = pympress/share/locale/babel_mapping.cfg

[compile_catalog]
domain = pympress
directory = pympress/share/locale/
use-fuzzy = false
statistics = true

[bdist_rpm]
bdist_base = build
# Do not fix the interpreter path
python = python3
# NB: py3_dist and typelib_deps are defined in the spec
requires =
	python(abi) = %%{python3_version}
	%%{!?typelib_deps:gtk3 gdk-pixbuf2 poppler-glib gobject-introspection}
	%%{?typelib_deps:typelib(cairo) typelib(GLib) typelib(DBus) typelib(DBusGLib) typelib(GObject) typelib(Gdk) typelib(GdkPixbuf) typelib(Gio) typelib(Gtk) typelib(Poppler)}
	%%{py3_dist watchdog}

build-requires =
	python3-devel
	python3-setuptools
#	%%{py3_dist Babel}

# Broken / inexistant options
#icon = pympress/share/pixmaps/pympress.png
#suggests =
#	%%{py3_dist python-vlc}
#	vlc
#	%%{?typelib_deps:typelib(Gst) typelib(GstPlayer)}
#	%%{!?typelib_deps:gstreamer1 gstreamer1-plugins-bad-free}
