[metadata]
name = pympress
version = attr: pympress.__version__
keywords = pdf-viewer, beamer, presenter, slide, projector, pdf-reader, presentation, python, poppler, gtk, pygi, vlc
description = A simple and powerful dual-screen PDF reader designed for presentations
long_description = file: README.md
long_description_content_type = text/markdown
author = Cimbali, Thomas Jost, Christof Rath, Epithumia
author_email = me@cimba.li
url = https://github.com/Cimbali/pympress/
download_url = https://github.com/Cimbali/pympress/releases/latest
project_urls =
	Issues = https://github.com/Cimbali/pympress/issues/
	Documentation = https://cimbali.github.io/pympress/
	Source Code = https://github.com/Cimbali/pympress/
license = GPL-2.0-or-later
license_files = LICENSE.txt
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: X11 Applications :: GTK
	Intended Audience :: Education
	Intended Audience :: End Users/Desktop
	Intended Audience :: Information Technology
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Natural Language :: English
	Natural Language :: French
	Natural Language :: German
	Natural Language :: Polish
	Natural Language :: Spanish
	Natural Language :: Czech
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Multimedia :: Graphics :: Presentation
	Topic :: Multimedia :: Graphics :: Viewers

[options]
packages =
	pympress
	pympress.media_overlays
python_requires = >=3.4
install_requires =
	watchdog
build_requires =
	setuptools
	babel

[options.extras_require]
build_sphinx =
	docutils==0.16
	sphinx
	recommonmark
	sphinxcontrib-napoleon
	sphinx-rtd-theme
babel =
	babel
	babelgladeextractor
vlc_video =
	python-vlc

[options.package_data]
pympress =
	share/defaults.conf
	share/xml/*.glade
	share/xml/*.xml
	share/css/*.css
	share/pixmaps/*.png
	share/locale/*/LC_MESSAGES/pympress.mo

[options.entry_points]
gui_scripts =
	pympress = pympress.__main__:main

[style]
based_on_style = pep8
column_limit = 120
split_complex_comprehension = on
split_penalty_comprehension = 5000
split_penalty_excess_character = 40
use_tabs = off
indent_width = 4

[flake8]
docstring-convention = google
max-line-length = 120
builtins = _, unicode
exclude =
	.git
	.eggs
	__pycache__
	build/
	dist/

ignore = D107, D200, D210, D413, E251, E302, E303, W504,  # never complain about those
		 D205, D212, D415, E201, E221, E241, E266, E301, E402, E701, E731  # allow sometimes, e.g. aligning code etc.

per-file-ignores =
	# do not complain about dummy functions
	pympress/media_overlays/gif_backend.py: D102, E704
	pympress/__main__.py: F401

[build_sphinx]
source-dir = docs
config-dir = docs
builder = html

[extract_messages]
no_location = true
no_wrap = true
sort_output = true
omit_header = true
output-file = pympress/share/locale/pympress.pot
mapping_file = pympress/share/locale/babel_mapping.cfg

[compile_catalog]
domain = pympress
directory = pympress/share/locale/
use-fuzzy = false
statistics = true

[pysrpm]
flavour = pympress
extract_dependencies = no
requires = gobject-introspection %%{py3_dist watchdog}

typelib_deps = typelib(cairo) typelib(GLib) typelib(DBus) typelib(DBusGLib) typelib(GObject) typelib(Gdk) typelib(GdkPixbuf) typelib(Gio) typelib(Gtk) typelib(Poppler) typelib(Gst) typelib(GstAllocators) typelib(GstApp) typelib(GstAudio) typelib(GstVideo) typelib(GstGL)
typelib_recommends = typelib(GstMpegts) typelib(GstWebRTC) typelib(GstBadAudio) typelib(GstCodecs)

requires_suse = gtk3 libpoppler-glib8 libgdk_pixbuf-2_0-0 gstreamer gstreamer-plugins-base gstreamer-plugins-good gstreamer-plugins-good-gtk libgstvideo-1_0-0
recommends_suse = gstreamer-plugins-ugly gstreamer-plugins-bad

requires_mandriva-mga =  gtk+3.0 (libpoppler-glib8 or lib64poppler-glib8) (libgdk_pixbuf2.0 or libgdk_pixbuf2.0_0) libgstreamer1.0 gstreamer1.0-plugins-base gstreamer1.0-plugins-good
recommends_mandriva-mga = gstreamer1.0-plugins-ugly gstreamer1.0-plugins-bad

requires_fedora-centos = gtk3 poppler-glib gdk-pixbuf2 gstreamer1 gstreamer1-plugins-base gstreamer1-plugins-good gstreamer1-plugins-good-gtk gstreamer1-plugins-bad-free gstreamer1-plugins-ugly-free
recommends_fedora-centos = gstreamer1-plugins-good-extras gstreamer1-plugins-bad-free-extras gstreamer1-plugins-ugly gstreamer1-plugins-bad-free

[pysrpm.pympress]
preamble =
	%%define normalize() %%(echo %%* | tr "[:upper:]_ " "[:lower:]--")
	%%{{?!py3_dist:%%define py3_dist() (python%%{{python3_version}}dist(%%{{normalize %%1}}) or python3-%%1)}}

	${base:preamble}
	%%if %%{{?!rhel:8}}%%{{?rhel}} >= 8
	Requires: (%%{{py3_dist pygobject}} or python3-gobject)
	%%else
	Requires: python3%%{{suffix:%%{{python3_version}}}}-gobject
	%%endif
	%%if 0%%{{?suse_version}}
	Requires: ${requires_suse}
	Recommends: ${recommends_suse}
	%%endif
	%%if 0%%{{?mdkversion}}%%{{?mga_version}}
	Requires: ${requires_mandriva-mga}
	Recommends: ${recommends_mandriva-mga}
	%%endif
	%%if 0%%{{?fedora}}%%{{?centos_version}}%%{{?scientificlinux_version}}%%{{?rhel}}
	Requires: ${requires_fedora-centos}
	%%if %%{{?!rhel:8}}%%{{?rhel}} >= 8
	Recommends: ${recommends_fedora-centos}
	%%endif
	%%endif
	%%if 0%%{{?suse_version}}%%{{?mga_version}}%%{{?mdkversion}}
	Requires: ${typelib_deps}
	Recommends: ${typelib_recommends}
	%%endif

post = ${base:post}
	if [ $$1 -gt 1 ]; then
		# On update, remove directories incorrectly left behind by previous versions
		find "%%{{python3_sitelib}}" -maxdepth 1 -name 'pympress-1.5.*' -print0 | xargs -0 --no-run-if-empty rm -r
	fi
